2006-08-23  Richard Levitte  <richard@levitte.org>

	* std_hooks.lua (mergers.emacs.available): Since
	mergers.emacs.cmd uses the command names "emacs" or "xemacs",
	it's quite useless to look at the EDITOR environment variable
	to determine availability.  Check that one of those exist on
	the path instead.  As a result, the variable `merger' and the
	environment variable MTN_MERGE can truly be used to tell the
	merge3 hook what program should be used for conflict resolution
	without having to define EDITOR as well.

2006-08-22  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-notify-hookversion.lua: New file that
	implements notification of changes received by netsync.
	The software is self-contained but depends on some other
	packages.  It's also not entirely optimal as it will send
	notifications for all revisions, unfiltered.  Still, it
	was time to share this.  Tests are underway.

2006-08-22  Zack Weinberg  <zackw@panix.com>

	* app_state.hh (app_state): Remove set_prog_name and prog_name members.
	* app_state.cc (app_state::app_state): Don't call set_prog_name.
	(app_state::set_prog_name): Delete definition.
	* ui.hh (user_interface): Make prog_name member public.  Delete
	set_prog_name member.
	* ui.cc (user_interface::user_interface): Initialize prog_name to "?".
	(user_interface::set_prog_name): Delete definition.
	* monotone.cc (my_poptStuffArgFile): Delete.
	(cpp_main): Delete code that was deleted once before and came
	back in the .boost-program-options merge.  Handle argv[0]
	separately from the rest of argv.  Update for ui.prog_name being
	the only copy of the program invocation name.  Use ui.prog_name
	instead of the local variable.
	* commands.cc, roster.cc: Include ui.hh.
	* cmd_merging.cc (update, pluck)
	* cmd_ws_commit.cc (checkout, commit)
	* commands.cc (notify_if_multiple_heads)
	* database.cc (database::check_schema)
	* netsync.cc (session::process_hello_command)
	* roster.cc (update_current_roster_from_filesystem):